force-app/main/default/objects/LLC_BI__Product_Type__c/LLC_BI__Product_Type__c.object-meta.xml
<CustomObject>
    <description>The Product Type Object is used to to track Product Types,  which is the middle level in the Product Hierarchy</description>
    <label>Product Type</label>
    <nameField>
        <label>Product Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>