force-app/main/default/objects/LLC_BI__Product_Type__c/fields/cm_Product_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>cm_Product_Class_Code__c</fullName>
    <description>Used in tandem with LLC_BI__Product__c.cm_Informatica_Product_Code__c</description>
    <externalId>true</externalId>
    <inlineHelpText>Only set for Deposit Products</inlineHelpText>
    <label>Product Class Code (Informatica)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>