force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__Booked__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Booked__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is populated automatically whenever a child product state config record is created with &quot;LLC_BI__Booked__c&quot; enabled. This field links to a Product State Config Pivot record which specifies all &quot;states&quot; (stage and status) that are considered &quot;Booked&quot; for this product type in the system.</description>
    <label>Product State Config Booked</label>
    <referenceTo>LLC_BI__Product_State_Config_Pivot__c</referenceTo>
    <relationshipLabel>Product Types Booked</relationshipLabel>
    <relationshipName>Product_Types</relationshipName>
    <type>Lookup</type>
</CustomField>