force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__Collapsed_Offer_Card_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Collapsed_Offer_Card_Field_Set__c</fullName>
    <description>The user populates this text field to specify the field set that appears in the collapsed offer cards for this product type.</description>
    <inlineHelpText>Enter the name of the field set with all necessary fields that appear in the collapsed offer card for this product type.</inlineHelpText>
    <label>Collapsed Offer Card Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>