force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__configKey__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__configKey__c</fullName>
    <description>This field is automatically populated. The Config Key field is an auto-number and is used to apply a unique Name and Number to the product type allowing it to be used with the Config Key configuration.</description>
    <displayFormat>KY_PT_{00000000}</displayFormat>
    <label>Config Key</label>
    <type>AutoNumber</type>
</CustomField>