force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__Default_Collateral_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Default_Collateral_Type__c</fullName>
    <description>Defines the default collateral type for this product type record.</description>
    <inlineHelpText>Pick the value of the desired default collateral type.</inlineHelpText>
    <label>Default Collateral Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>