force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__Enable_Offers_Auto_Applied_Fees__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Enable_Offers_Auto_Applied_Fees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The user manually populates this optional checkbox field to enable auto-applied fees when generating pricing options based on the Product Type. By default, it is false.</description>
    <inlineHelpText>This field enables auto-applied fees for your offers.</inlineHelpText>
    <label>Enable Offers Auto-Applied Fees</label>
    <type>Checkbox</type>
</CustomField>