force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__Is_Deposit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Deposit__c</fullName>
    <description>This field is automatically set. This checkbox field is selected if the product object field on the parent product line is set to deposit.</description>
    <formula>CONTAINS(TEXT(LLC_BI__Product_Line__r.LLC_BI__Product_Object__c), &quot;Deposit__c&quot;)</formula>
    <label>Is Deposit</label>
    <type>Checkbox</type>
</CustomField>