force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__Is_Mortgage_Insurance_Estimate_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Mortgage_Insurance_Estimate_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this checkbox to indicate a loan requires mortgage insurance estimation.</description>
    <inlineHelpText>Select this checkbox to indicate the loan requires mortgage insurance estimation.</inlineHelpText>
    <label>Is Mortgage Insurance Estimate Required</label>
    <type>Checkbox</type>
</CustomField>