force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__Loan_Information_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Information_Field_Set__c</fullName>
    <description>Manually populate this text field with the name of a field set that contains the input fields that should appear on a product type. This allows for the dynamic display of the loan information input fields.</description>
    <inlineHelpText>Enter the name of a field set that maps to this product type.</inlineHelpText>
    <label>Loan Information Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>