force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__Ready_To_Transmit__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Ready_To_Transmit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is populated automatically whenever a child product state config record is created with &quot;LLC_BI__Is_Ready_To_Transmit__c&quot; enabled. This field links to a Product State Config Pivot record which specifies all &quot;states&quot; (stage and status) that are considered Ready to Transmit for this product type in the system. This is used to specify stages that are considered &quot;Ready to Transmit&quot; to the CUSO.</description>
    <label>Product State Config Ready To Transmit</label>
    <referenceTo>LLC_BI__Product_State_Config_Pivot__c</referenceTo>
    <relationshipLabel>Product Types Ready To Transmit</relationshipLabel>
    <relationshipName>Product_Types_Ready_To_Transmit</relationshipName>
    <type>Lookup</type>
</CustomField>