force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__Recalculate_Offers_Field_Set__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Recalculate_Offers_Field_Set__c</fullName>
    <description>The user populates this text field with the field set name that contains the desired fields to be displayed in the recalculate offers component on the offers page. By default, this field set is blank.</description>
    <inlineHelpText>Manually populate this text field with the name of a field set that contains the fields that should appear in the recalculate offers component for this product type.</inlineHelpText>
    <label>Recalculate Offers Field Set</label>
    <length>255</length>
    <type>Text</type>
</CustomField>