force-app/main/default/objects/LLC_BI__Product_Type__c/fields/LLC_BI__Start_Production_Application__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Start_Production_Application__c</fullName>
    <description>Administrators populate this optional text field to define the group or route to which the system directs the user after the user selects a product type. The system only uses the app or route defined in this field on the initial creation of the new loan or product. By default, it is blank.</description>
    <inlineHelpText>When the user selects a product type, the system redirects them to the app or route name entered here.</inlineHelpText>
    <label>Start Product Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>