force-app/main/default/objects/LLC_BI__Product_Type__c/fields/nPortal__Online_Application_Enabled__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Online_Application_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to indicate if the product type is
           available for use in Customer Portal.</description>
    <inlineHelpText>Check this field to enable this product type for Customer Portal online applications.</inlineHelpText>
    <label>Online Application Enabled</label>
    <type>Checkbox</type>
</CustomField>