force-app/main/default/objects/LLC_BI__Product_Type__c/fields/nPortal__Online_Application_Group__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Online_Application_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup which maps to a UI Framework Group record that represents the Online Application used for this Product Type.</description>
    <label>Online Application Group</label>
    <referenceTo>nFORCE__Group__c</referenceTo>
    <relationshipLabel>Product Types</relationshipLabel>
    <relationshipName>Product_Types</relationshipName>
    <type>Lookup</type>
</CustomField>