force-app/main/default/objects/LLC_BI__Product_Type__c/fields/nPortal__Online_Application_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Online_Application_Header_Text__c</fullName>
    <description>Header text that appears on the Self Registration page for this product type.</description>
    <inlineHelpText>Enter Header text to be displayed on the Self Registration page for this product type.</inlineHelpText>
    <label>Online Application Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>