force-app/main/default/objects/LLC_BI__Product_Type__c/validationRules/LLC_BI__Product_State_Excluded_Config_Count.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Product_State_Excluded_Config_Count</fullName>
    <active>true</active>
    <errorConditionFormula>LLC_BI__Product_State_Excluded_Config_Count__c &gt; 10</errorConditionFormula>
    <errorMessage>A maximum of 10 excluded config records per product type is currently supported.</errorMessage>
</ValidationRule>