force-app/main/default/objects/LLC_BI__Product_Type__c/validationRules/LLC_BI__Product_State_Rdy_To_Trans_Confg_Cnt.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Product_State_Rdy_To_Trans_Confg_Cnt</fullName>
    <active>true</active>
    <errorConditionFormula>LLC_BI__Product_State_Rdy_To_Trans_Confg_Cnt__c &gt; 10</errorConditionFormula>
    <errorMessage>A maximum of 10 ready to transmit config records per product type is currently supported.</errorMessage>
</ValidationRule>